--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="header">
+        <div class="header-container">
             <div class="logo-container">
                 <a href="https://www.deslibris.pub" target="_blank">
                     <img src="{{ url_for('static', filename='images/dpslogo.png') }}" alt="DesLibris Publishing Solutions Logo" class="logo">
